--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@wangeditor/editor-for-vue",
+  "name": "@wangchaodeyuzhou/editor-for-vue3",
   "version": "5.1.12",
   "description": "wangEditor component for vue@next",
   "author": "liuqh0609 <liuqh0609@163.com>",
@@ -25,7 +25,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/wangeditor-team/wangEditor-for-vue3.git"
+    "url": "git+https://github.com/wangchaodeyuzhou/wEditor-for-vue3.git"
   },
   "scripts": {
     "dev": "vite",
@@ -35,7 +35,7 @@
     "test": "jest"
   },
   "peerDependencies": {
-    "@wangeditor/editor": ">=5.1.0",
+    "@wangchaodeyuzhou/editor": ">=5.1.0",
     "vue": "^3.0.5"
   },
   "dependencies": {},
@@ -49,7 +49,7 @@
     "@vitejs/plugin-vue": "^1.3.0",
     "@vue/compiler-sfc": "^3.0.5",
     "@vue/test-utils": "^2.0.0-rc.16",
-    "@wangeditor/editor": "^5.1.1",
+    "@wangchaodeyuzhou/editor": "^5.1.23",
     "babel-jest": "^26.6.3",
     "jest": "25.5.4",
     "lodash": "^4.17.21",
